# A_crypt

./: .gitignore  CMakeLists.txt  README.md
include/: AES.h  KeyManager.h  SE.h
include/FHE/: FHE.h  FHE_utils.hpp
include/utils/: String_utils.h
src/: AES.cpp  KeyManager.cpp  SE.cpp
src/FHE/: FHE.cpp  FHE_utils.cpp
src/utils/: String_utils.cpp
tests/: benchmark.cpp  fhe_test.cpp  fuzz_se.cpp  hybrid_test.cpp  main.cpp  se_test.cpp
